--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,18 @@
-"scripts": {
-  "start": "node server.js",
-  "test": "jest"
-},
-"type": "module"
+{
+  "name": "ecommerce-app",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "jest"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  }
+}
