--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-app",
+  "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -8,6 +8,9 @@
     "start": "node server.js",
     "test": "jest"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   },
