--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js",
     "test": "jest"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
