--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -9,7 +9,7 @@ on:
       - 'backend/**'
 
 jobs:
-  backend-build:
+  backend-ci:
     runs-on: ubuntu-latest
 
     defaults:
@@ -17,7 +17,7 @@ jobs:
         working-directory: backend
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -25,8 +25,8 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Run tests
+      - name: Run Tests
         run: npm test
