--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -9,7 +9,7 @@ on:
       - 'frontend/**'
 
 jobs:
-  frontend-build:
+  frontend-ci:
     runs-on: ubuntu-latest
 
     defaults:
@@ -17,7 +17,7 @@ jobs:
         working-directory: frontend
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -25,12 +25,11 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build
-
-      # Optional: Run tests
-      - name: Run tests
+      - name: Run Tests
         run: npm test
+
+      - name: Build Frontend
+        run: npm run build
