--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,7 +1,8 @@
-name: Frontend CI
+name: Frontend CI & Deploy to ECR
 
 on:
   push:
+    branches: [ main ]
     paths:
       - 'frontend/**'
   pull_request:
@@ -31,11 +32,31 @@ jobs:
       - name: Run Tests
         run: npm test
 
-      - name: Build Frontend
+      - name: Build Frontend App
         run: npm run build
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
+          docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
       - name: Build Docker Image
-        run: docker build -t ecommerce-frontend .
+        run: |
+          docker build -t ${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }} .
+
+      - name: Tag Docker Image
+        run: |
+          docker tag ${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+
+      - name: Push Docker Image to ECR
+        run: |
+          docker push \
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
