--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "app.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "jest": {
