--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,58 +1,62 @@
-# name: Frontend CI & Deploy to ECR
+name: Frontend CI & Deploy to ECR
 
-# on:
-#   push:
-#     branches: [ main ]
+on:
+  push:
+    branches: [ main ]
     
-#   pull_request:
-#     branches: [ main ]
-   
-# jobs:
-#   frontend-ci:
-#     runs-on: ubuntu-latest
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'frontend-webapp/**'
 
-  
+env:
+  AWS_ECR_REPOSITORY: frontend-webapp
+  AWS_REGION: us-east-1
+jobs:
+  frontend-ci:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
 
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '20'
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-#       - name: Install Dependencies
-#         run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-#       - name: Run Tests
-#         run: npm test
+      - name: Install Dependencies
+        run: npm install
 
-#       # - name: Build Frontend App
-#       #   run: npm run build
+      - name: Run Tests
+        run: npm test
 
-#       - name: Configure AWS Credentials
-#         uses: aws-actions/configure-aws-credentials@v2
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Build Frontend App
+      #   run: npm run build
 
-#       - name: Login to Amazon ECR
-#         run: |
-#           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
-#           docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-#       - name: Build Docker Image
-#         run: |
-#           docker build -t ${{ env.AWS_ECR_REPOSITORY_FRONTEND }} .
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
+          docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
-#       - name: Tag Docker Image
-#         run: |
-#           docker tag ${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
-#             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ env.AWS_ECR_REPOSITORY_FRONTEND }} .
 
-#       - name: Push Docker Image to ECR
-#         run: |
-#           docker push \
-#             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+      - name: Tag Docker Image
+        run: |
+          docker tag ${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+
+      - name: Push Docker Image to ECR
+        run: |
+          docker push \
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
