--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -7,15 +7,16 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'frontend-webapp/**'
-
+       - 'frontend-webapp/**'
 env:
   AWS_ECR_REPOSITORY: frontend-webapp
   AWS_REGION: us-east-1
 jobs:
   frontend-ci:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: frontend-webapp
 
     steps:
       - name: Checkout Code
@@ -53,10 +54,10 @@ jobs:
 
       - name: Tag Docker Image
         run: |
-          docker tag ${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
-            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+          docker tag ${{ env.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.AWS_ECR_REPOSITORY_FRONTEND }}:latest
 
       - name: Push Docker Image to ECR
         run: |
           docker push \
-            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY_FRONTEND }}:latest
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.AWS_ECR_REPOSITORY_FRONTEND }}:latest
