--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -33,8 +33,8 @@ jobs:
     #   - name: Run Tests
     #     run: npm test
 
-      - name: Build Frontend App
-        run: npm run build
+    #   - name: Build Frontend App
+    #     run: npm run build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ env.AWS_ECR_REPOSITORY_FRONTEND }} .
+          docker build -t ${{ env.AWS_ECR_REPOSITORY }} .
 
       - name: Tag Docker Image
         run: |
