--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -14,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/Emmyace-hub/ECOMMERCE/issues"
   },
@@ -28,5 +27,17 @@
   "devDependencies": {
     "jest": "^30.0.4",
     "supertest": "^7.1.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
