--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -50,8 +50,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ env.AWS_ECR_REPOSITORY }} .
-
+          docker build -t frontend-webapp .
       - name: Tag Docker Image
         run: |
           docker tag ${{ env.AWS_ECR_REPOSITORY_FRONTEND }}:latest \
