--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t frontend-webapp .
+          docker build  -t ${{ env.AWS_ECR_REPOSITORY }} .
       - name: Tag Docker Image
         run: |
           docker tag ${{ env.AWS_ECR_REPOSITORY }}:latest \
